--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,21 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <scm>
+    <connection>scm:git:https://github.com/pbj23000/monster.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com:pbj23000/monster.git</developerConnection>
+    <tag>HEAD</tag>
+    <url>https://github.com/pbj23000/monster</url>
+  </scm>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
